--- a/main.css
+++ b/main.css
@@ -8,6 +8,10 @@ body{
     margin: 0;
 }
 
+#title{
+    margin-top: 2rem;
+}
+
 .content{
     display: flex;
     flex-direction: column;
@@ -21,7 +25,7 @@ body{
     clip-path: circle();
 }
 
-#cat-gif-img{
+#cat-heart-gif{
     width: auto;
     height: 350px;
 }
@@ -55,4 +59,32 @@ body{
 #no-btn{
     background-color: #FF6161;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+/* Pop-up Dialogs on button click */
+.no-dialog, .yes-dialog{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute; 
+    padding: 12px;
+    gap: 1rem; /* Gap between gif & text underneath */
+    border-radius: 12px;
+    top: 50%; /* Make it so that it covers the yes / no buttons lol */
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px; /* Need a specific value to work */
+
+    border: 5px solid black;
+}
+
+.no-dialog{
+    display: none; /* Toggle between display: none and display: flex. */
+    background: white;
+}
+
+.yes-dialog{
+    display: none;
+    background: white;
 }
