--- a/main.css
+++ b/main.css
@@ -53,11 +53,13 @@ body{
 }
 
 #yes-btn{
+    color: black;
     background-color: #89FF77;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 #no-btn{
+    color: black;
     background-color: #FF6161;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
@@ -108,6 +110,7 @@ body{
     border-radius: 8px;
     font-weight: bold;
     background: #FF6161;
+    color: black;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
@@ -126,6 +129,7 @@ body{
     border-radius: 10px;
     font-weight: bold;
     background: #FF6161;
+    color: black;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 
 }
