--- a/main.css
+++ b/main.css
@@ -61,13 +61,13 @@ body{
 #yes-btn{
     color: black;
     background-color: #89FF77;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 #no-btn{
     color: black;
     background-color: #FF6161;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 /* Pop-up Dialogs on button click */
@@ -137,5 +137,8 @@ body{
     background: #FF6161;
     color: black;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
 
+.btn-disabled{
+    pointer-events: none;
 }
